--- a/PCA/Pr2/PCA_1.2.Rmd
+++ b/PCA/Pr2/PCA_1.2.Rmd
@@ -53,7 +53,6 @@ Loading a package into an R session **requires it to be already installed**. If 
 
 
 ```{r warning=FALSE, message=FALSE}
-
 #########################################
 # Loading necessary packages and reason #
 #########################################
@@ -91,7 +90,6 @@ library(factoextra)
 library(scatterplot3d)
 
 library(haven)
-
 ```
 
 ## Description of the data set *DB_PCA_1.2.sav*
@@ -104,11 +102,10 @@ The following code chunk shows how to load the dataset with IBMS SPSS format (.s
 # Loading a .sav (IBM SPSS) file
 # The output of this function is NOT a data.frame object
 # Remember that package 'foreign' is required
-data_spss<-read_spss("DB_PCA_1.2.sav")
+data_spss <- read_spss("DB_PCA_1.2.sav")
 
 # This sentence identifies the type of object that the identifier represents
 class(data_spss)
-
 ```
 
 The file *DB_PCA_1.2.sav* contains, among others, the variables *znac_def, zmortinf, zfertil, zinc_pob, rate_na, zurbana, zalfabet, zcaloría, zlog_pib, zpib_cap, zpoblac, zdensida*, which are the standardized variables of the original ones with the same label but without the initial *z*, and which respectively are the values for each country in the world of:
@@ -133,7 +130,6 @@ In this section, a preliminary exploratory data analysis of the data set is perf
 ## **Exploring** the data set
 
 ```{r warning=FALSE, message=FALSE}
-
 # This line loads the variable names from this data.frame
 # So that we can access by their name with no refer to the data.frame identifier
 attach(data_spss)
@@ -142,12 +138,10 @@ attach(data_spss)
 colnames(data_spss)
 
 # Displaying a few records
-head(data_spss, n=10)
+head(data_spss, n = 10)
 
 # Displaying basic descriptives of variable 'Al'
 summary(zlogden)
-
-
 ```
 
 ## **Descriptive analysis** (numerical and graphical)
@@ -156,27 +150,28 @@ summary(zlogden)
 ### poblac - Population
 
 ```{r warning=FALSE, message=FALSE}
-
 # Basic descriptive statistics
 # Remember that package 'summarytools' is required
 descr(poblac)
 
 # Histogram, density and boxplot
 # Remember that package 'ggplot2' is required
-p1<-ggplot(data_spss,aes(x=poblac))+geom_density()+
-  labs(title = "Density of poblac",x="poblac",y="Values")
+p1 <- ggplot(data_spss, aes(x = poblac)) +
+  geom_density() +
+  labs(title = "Density of poblac", x = "poblac", y = "Values")
 
-p2<-ggplot(data_spss,aes(x=poblac))+geom_histogram()+
-  labs(title = "Histogram of poblac",x="poblac",y="Values")
+p2 <- ggplot(data_spss, aes(x = poblac)) +
+  geom_histogram() +
+  labs(title = "Histogram of poblac", x = "poblac", y = "Values")
 
-p3<-ggplot(data_spss,aes(x=poblac))+
-  geom_boxplot(outlier.colour="red", outlier.shape=1,outlier.size=2)+
-  coord_flip()+labs(title = "Boxplot of poblac",x="Values",y="")
+p3 <- ggplot(data_spss, aes(x = poblac)) +
+  geom_boxplot(outlier.colour = "red", outlier.shape = 1, outlier.size = 2) +
+  coord_flip() +
+  labs(title = "Boxplot of poblac", x = "Values", y = "")
 
 # This function controls the graphical output device
 # Remember that package 'ggpubr' is required
-ggarrange(p1,p2,p3, nrow=1, common.legend = FALSE)
-
+ggarrange(p1, p2, p3, nrow = 1, common.legend = FALSE)
 ```
 
 ### **Assignment**
@@ -190,17 +185,15 @@ The data frame *data_spss* has 48 variables. For this illustration we are intere
 Next code chunk defines a new data frame object with the only fifteen variables of interest for this illustration.
 
 ```{r warning=FALSE, message=FALSE}
-
 # The first 31 variables are eliminated.
-data_pca<-data_spss[,-(1:31)]
+data_pca <- data_spss[, -(1:31)]
 
 # The last two variables seem to be duplicates or with irrelevant information.
-data_pca<-data_pca[,-(16:17)]
+data_pca <- data_pca[, -(16:17)]
 
 
 # The first three records in the database are displayed
-head(data_pca,n=3)
-
+head(data_pca, n = 3)
 ```  
 
 ## **Not available data** (NA)
@@ -213,33 +206,31 @@ The following source code defines the function *not_available* whose utility is 
 
 
 ```{r warning=FALSE, message=FALSE}
-
 # Construction of the function that handles missing values.
-not_available<-function(data,na.rm=F){
-  data[is.na(data)]<-mean(data,na.rm=T)
+not_available <- function(data, na.rm = F) {
+  data[is.na(data)] <- mean(data, na.rm = T)
   data
 }
 
 # We call the not_available function for each variable in the database
-data_pca$znac_def<-not_available(data_pca$znac_def)
-data_pca$zmortinf<-not_available(data_pca$zmortinf)
-data_pca$zfertil<-not_available(data_pca$zfertil)
-data_pca$zinc_pob<-not_available(data_pca$zinc_pob)
-data_pca$ztasa_na<-not_available(data_pca$ztasa_na)
-data_pca$zurbana<-not_available(data_pca$zurbana)
-data_pca$zespvida<-not_available(data_pca$zespvida)
-data_pca$zalfabet<-not_available(data_pca$zalfabet)
-data_pca$zcaloría<-not_available(data_pca$zcaloría)
-data_pca$zlog_pib<-not_available(data_pca$zlog_pib)
-data_pca$zpib_cap<-not_available(data_pca$zpib_cap)
-data_pca$zpoblac<-not_available(data_pca$zpoblac)
-data_pca$zdensida<-not_available(data_pca$zdensida)
-data_pca$zlog_pob<-not_available(data_pca$zlog_pob)
-data_pca$zlogden<-not_available(data_pca$zlogden)
+data_pca$znac_def <- not_available(data_pca$znac_def)
+data_pca$zmortinf <- not_available(data_pca$zmortinf)
+data_pca$zfertil <- not_available(data_pca$zfertil)
+data_pca$zinc_pob <- not_available(data_pca$zinc_pob)
+data_pca$ztasa_na <- not_available(data_pca$ztasa_na)
+data_pca$zurbana <- not_available(data_pca$zurbana)
+data_pca$zespvida <- not_available(data_pca$zespvida)
+data_pca$zalfabet <- not_available(data_pca$zalfabet)
+data_pca$zcaloría <- not_available(data_pca$zcaloría)
+data_pca$zlog_pib <- not_available(data_pca$zlog_pib)
+data_pca$zpib_cap <- not_available(data_pca$zpib_cap)
+data_pca$zpoblac <- not_available(data_pca$zpoblac)
+data_pca$zdensida <- not_available(data_pca$zdensida)
+data_pca$zlog_pob <- not_available(data_pca$zlog_pob)
+data_pca$zlogden <- not_available(data_pca$zlogden)
 
 # We view the data again
-head(data_pca,n=3)
-
+head(data_pca, n = 3)
 ```
 
 
@@ -251,14 +242,14 @@ This graphical output shows together the boxplots of all the quantitative variab
 
 
 ```{r warning=FALSE, message=FALSE}
-
 # Boxplots of all variables together
 # This visualization is not the best due to the difference between the scales
-boxplot(data_pca,main="Outliers",
-        xlab="All explanatory variables",
-        ylab="Values",
-        col=c(1:15))
-
+boxplot(data_pca,
+  main = "Outliers",
+  xlab = "All explanatory variables",
+  ylab = "Values",
+  col = c(1:15)
+)
 ```
 
 ### Making decisions
@@ -271,52 +262,51 @@ The following source code defines the function *outlier* whose utility is to dea
 
 
 ```{r warning=FALSE, message=FALSE}
-
 # Recursive function that modifies outliers by the mean of their variable
-outlier<-function(data,na.rm=T){
+outlier <- function(data, na.rm = T) {
+  H <- 1.5 * IQR(data)
+  data[data < quantile(data, 0.25, na.rm = T) - H] <- NA
+  data[data > quantile(data, 0.75, na.rm = T) + H] <- NA
+  data[is.na(data)] <- mean(data, na.rm = T)
+  H <- 1.5 * IQR(data)
 
-  H<-1.5*IQR(data)
-  data[data<quantile(data,0.25,na.rm = T)-H]<-NA
-  data[data>quantile(data,0.75, na.rm = T)+H]<-NA
-  data[is.na(data)]<-mean(data, na.rm = T)
-  H<-1.5*IQR(data)
-
-  if (TRUE %in% (data<quantile(data,0.25,na.rm = T)-H) |
-      TRUE %in% (data>quantile(data,0.75,na.rm = T)+H))
+  if (TRUE %in% (data < quantile(data, 0.25, na.rm = T) - H) |
+    TRUE %in% (data > quantile(data, 0.75, na.rm = T) + H)) {
     outlier(data)
-  else
-
+  } else {
     return(data)
-
+  }
 }
 
 # This data.frame is to preserve original data once the outliers are modified
-data_pca_aux<-data_pca
+data_pca_aux <- data_pca
 
 # Called to outlier function for each variable identified with outliers
-data_pca_aux$znac_def<-outlier(data_pca_aux$znac_def)
-data_pca_aux$zmortinf<-outlier(data_pca_aux$zmortinf)
-data_pca_aux$zespvida<-outlier(data_pca_aux$zespvida)
-data_pca_aux$zpib_cap<-outlier(data_pca_aux$zpib_cap)
-data_pca_aux$zpoblac<-outlier(data_pca_aux$zpoblac)
-data_pca_aux$zdensida<-outlier(data_pca_aux$zdensida)
-data_pca_aux$zlog_pob<-outlier(data_pca_aux$zlog_pob)
-data_pca_aux$zlogden<-outlier(data_pca_aux$zlogden)
+data_pca_aux$znac_def <- outlier(data_pca_aux$znac_def)
+data_pca_aux$zmortinf <- outlier(data_pca_aux$zmortinf)
+data_pca_aux$zespvida <- outlier(data_pca_aux$zespvida)
+data_pca_aux$zpib_cap <- outlier(data_pca_aux$zpib_cap)
+data_pca_aux$zpoblac <- outlier(data_pca_aux$zpoblac)
+data_pca_aux$zdensida <- outlier(data_pca_aux$zdensida)
+data_pca_aux$zlog_pob <- outlier(data_pca_aux$zlog_pob)
+data_pca_aux$zlogden <- outlier(data_pca_aux$zlogden)
 
-# We compare the original data and the fixed ones with respective boxplots 
-par(mfrow=c(1,2))
+# We compare the original data and the fixed ones with respective boxplots
+par(mfrow = c(1, 2))
 # Boxplot original data
-boxplot(data_pca,main="Original data",
-        xlab="All explanatory variables",
-        ylab="z-values",
-        col=c(1:15))
+boxplot(data_pca,
+  main = "Original data",
+  xlab = "All explanatory variables",
+  ylab = "z-values",
+  col = c(1:15)
+)
 # Boxplot fixed data
-boxplot(data_pca_aux,main="Data with no outliers",
-        xlab="All explanatory variables",
-        ylab="z-values",
-        col=c(1:15))
-
-
+boxplot(data_pca_aux,
+  main = "Data with no outliers",
+  xlab = "All explanatory variables",
+  ylab = "z-values",
+  col = c(1:15)
+)
 ```
 
 
@@ -329,19 +319,18 @@ boxplot(data_pca_aux,main="Data with no outliers",
 According to the numerical results below, it is observed that the data **are correlated** both **at the sample level** (see correlation matrix) and **at the populacion level** (Bartlett's sphericity test is significant).
 
 ```{r warning=FALSE, message=FALSE}
-
 ###############################
 # Correlation at sample level #
 ###############################
 
 # Are the variables correlated at sample level?
-correlation_matrix<-cor(data_pca_aux)
+correlation_matrix <- cor(data_pca_aux)
 correlation_matrix
 det(correlation_matrix)
 
 # It is noticed an important correlation between some variables
 # For instance, sodium (NA) and antimony (Sb) or titanium (Ti) and iron (Fe)
-cor(data_pca_aux$zalfabet,data_pca_aux$ztasa_na)
+cor(data_pca_aux$zalfabet, data_pca_aux$ztasa_na)
 
 
 ###################################
@@ -350,17 +339,16 @@ cor(data_pca_aux$zalfabet,data_pca_aux$ztasa_na)
 
 # Bartlett's sphericity test:
 # This test checks whether the correlations are significantly different from 0
-# The null hypothesis is H_0; det(R)=1 means the variables are uncorrelated 
+# The null hypothesis is H_0; det(R)=1 means the variables are uncorrelated
 # R denotes the correlation matrix
 # cortest.bartlett function in the package pysch performs this test
 # This function works with standardized data.
 
 # Standardization
-data_pca_aux_scale<-scale(data_pca_aux)
+data_pca_aux_scale <- scale(data_pca_aux)
 
 # Bartlett's sphericity test
 cortest.bartlett(cor(data_pca_aux_scale))
-
 ```
 
 ### Absence of outliers
@@ -378,12 +366,11 @@ It is not necessary, since the *prcomp* function that obtains the principal comp
 
 
 ```{r warning=FALSE, message=FALSE}
-
 # The 'prcomp' function in the base R package performs this analysis
 # Parameters 'scale' and 'center' are set to TRUE to consider standardized data
-PCA<-prcomp(data_pca_aux, scale=T, center = T)
+PCA <- prcomp(data_pca_aux, scale = T, center = T)
 
-# The field 'rotation' of the 'PCA' object is a matrix 
+# The field 'rotation' of the 'PCA' object is a matrix
 # Its columns are the coefficients of the principal components
 # Indicates the weight of each variable in the corresponding principal component
 PCA$rotation
@@ -399,7 +386,6 @@ Each principal component is obtained in a simple way as a linear combination of 
 ### Explained variance rate
 
 ```{r warning=FALSE, message=FALSE}
-
 # The function 'summary' applied to the 'PCA' object provides relevant information
 # - Standard deviations of each principal component
 # - Proportion of variance explained and cummulative variance
@@ -408,23 +394,32 @@ summary(PCA)
 # The following graph shows the proportion of explained variance
 Explained_variance <- PCA$sdev^2 / sum(PCA$sdev^2)
 
-p1<-ggplot(data = data.frame(Explained_variance, pc = 1:15),
-  aes(x = pc, y = Explained_variance, fill=Explained_variance )) +
-  geom_col(width = 0.3) + scale_y_continuous(limits = c(0,0.6)) + theme_bw() +
-  labs(x = "Principal component", y= "Proportion of variance")
+p1 <- ggplot(
+  data = data.frame(Explained_variance, pc = 1:15),
+  aes(x = pc, y = Explained_variance, fill = Explained_variance)
+) +
+  geom_col(width = 0.3) +
+  scale_y_continuous(limits = c(0, 0.6)) +
+  theme_bw() +
+  labs(x = "Principal component", y = "Proportion of variance")
 
 # The following graph shows the proportion of cumulative explained variance
-Cummulative_variance<-cumsum(Explained_variance)
+Cummulative_variance <- cumsum(Explained_variance)
 
-p2<-ggplot( data = data.frame(Cummulative_variance, pc = 1:15),
-  aes(x = pc, y = Cummulative_variance ,fill=Cummulative_variance )) +
-  geom_col(width = 0.5) +  scale_y_continuous(limits = c(0,1)) + theme_bw() +
-  labs(x = "Principal component",
-       y = "Proportion of cumulative variance")
+p2 <- ggplot(
+  data = data.frame(Cummulative_variance, pc = 1:15),
+  aes(x = pc, y = Cummulative_variance, fill = Cummulative_variance)
+) +
+  geom_col(width = 0.5) +
+  scale_y_continuous(limits = c(0, 1)) +
+  theme_bw() +
+  labs(
+    x = "Principal component",
+    y = "Proportion of cumulative variance"
+  )
 
 p1
 p2
-
 ```
 
 
@@ -439,7 +434,6 @@ There are different methods:
 For this illustration, applying the rule of Abdi et al., only **four principal components are considered**, as can be deduced from the following code chunk.
 
 ```{r warning=FALSE, message=FALSE}
-
 #######################
 # Rule of Abdi et al. #
 #######################
@@ -449,7 +443,6 @@ PCA$sdev^2
 
 # Average of variances
 mean(PCA$sdev^2)
-
 ```
 
 
@@ -459,23 +452,27 @@ mean(PCA$sdev^2)
 
 
 ```{r warning=FALSE, message=FALSE}
-
 # These graphical outputs show the projection of the variables in two dimensions
-# Display the weight of the variable in the direction of the principal component 
-p1<-fviz_pca_var(PCA,repel=TRUE,col.var="cos2",
-                 legend.title="Distance", title="Variables")+theme_bw()
+# Display the weight of the variable in the direction of the principal component
+p1 <- fviz_pca_var(PCA,
+  repel = TRUE, col.var = "cos2",
+  legend.title = "Distance", title = "Variables"
+) + theme_bw()
 
-p2<-fviz_pca_var(PCA,axes=c(1,3),repel=TRUE,col.var="cos2",
-                 legend.title="Distance", title="Variables")+theme_bw()
+p2 <- fviz_pca_var(PCA,
+  axes = c(1, 3), repel = TRUE, col.var = "cos2",
+  legend.title = "Distance", title = "Variables"
+) + theme_bw()
 
-p3<-fviz_pca_var(PCA,axes=c(2,3),repel=TRUE,col.var="cos2",
-                 legend.title="Distance", title="Variables")+theme_bw()
+p3 <- fviz_pca_var(PCA,
+  axes = c(2, 3), repel = TRUE, col.var = "cos2",
+  legend.title = "Distance", title = "Variables"
+) + theme_bw()
 
 # Displaying graphics
 p1
 p2
 p3
-
 ```
 
 
@@ -484,27 +481,31 @@ p3
 
 
 ```{r warning=FALSE, message=FALSE}
-
 # It is also possible to represent the observations
-# As well as identify with colors those observations that explain the greatest 
+# As well as identify with colors those observations that explain the greatest
 # variance of the principal components
-p1<-fviz_pca_ind(PCA,col.ind = "contrib", 
-             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-             repel=TRUE,legend.title="Contrib.var", title="Records")+theme_bw()
+p1 <- fviz_pca_ind(PCA,
+  col.ind = "contrib",
+  gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+  repel = TRUE, legend.title = "Contrib.var", title = "Records"
+) + theme_bw()
 
-p2<-fviz_pca_ind(PCA,axes=c(1,3),col.ind = "contrib",
-             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-             repel=TRUE,legend.title="Contrib.var", title="Records")+theme_bw()
+p2 <- fviz_pca_ind(PCA,
+  axes = c(1, 3), col.ind = "contrib",
+  gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+  repel = TRUE, legend.title = "Contrib.var", title = "Records"
+) + theme_bw()
 
-p3<-fviz_pca_ind(PCA,axes=c(2,3),col.ind = "contrib",
-             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-             repel=TRUE,legend.title="Contrib.var", title="Records")+theme_bw()
+p3 <- fviz_pca_ind(PCA,
+  axes = c(2, 3), col.ind = "contrib",
+  gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+  repel = TRUE, legend.title = "Contrib.var", title = "Records"
+) + theme_bw()
 
 # Displaying graphics
 p1
 p2
 p3
-
 ```
 
 
@@ -514,32 +515,36 @@ p3
 
 
 ```{r warning=FALSE, message=FALSE}
-
 # Joint representation of variables and observations
 # Relates the possible relationships between the contributions of the records
-# to the variances of the components and the weight of the variables in each 
+# to the variances of the components and the weight of the variables in each
 # principal component
 
-p1<-fviz_pca(PCA,alpha.ind ="contrib", col.var = "cos2",
-         col.ind="seagreen",
-         gradient.cols = c("#FDF50E", "#FD960E", "#FD1E0E"),
-         repel=TRUE, legend.title="Distancia")+theme_bw()
+p1 <- fviz_pca(PCA,
+  alpha.ind = "contrib", col.var = "cos2",
+  col.ind = "seagreen",
+  gradient.cols = c("#FDF50E", "#FD960E", "#FD1E0E"),
+  repel = TRUE, legend.title = "Distancia"
+) + theme_bw()
 
-p2<-fviz_pca(PCA,axes=c(1,3),alpha.ind ="contrib", 
-         col.var = "cos2",col.ind="seagreen",
-         gradient.cols = c("#FDF50E", "#FD960E", "#FD1E0E"),
-         repel=TRUE, legend.title="Distancia")+theme_bw()
+p2 <- fviz_pca(PCA,
+  axes = c(1, 3), alpha.ind = "contrib",
+  col.var = "cos2", col.ind = "seagreen",
+  gradient.cols = c("#FDF50E", "#FD960E", "#FD1E0E"),
+  repel = TRUE, legend.title = "Distancia"
+) + theme_bw()
 
-p3<-fviz_pca(PCA,axes=c(2,3),alpha.ind ="contrib", 
-         col.var = "cos2",col.ind="seagreen",
-         gradient.cols = c("#FDF50E", "#FD960E", "#FD1E0E"),
-         repel=TRUE, legend.title="Distancia")+theme_bw()
+p3 <- fviz_pca(PCA,
+  axes = c(2, 3), alpha.ind = "contrib",
+  col.var = "cos2", col.ind = "seagreen",
+  gradient.cols = c("#FDF50E", "#FD960E", "#FD1E0E"),
+  repel = TRUE, legend.title = "Distancia"
+) + theme_bw()
 
 # Displaying graphics
 p1
 p2
 p3
-
 ```
 
 
@@ -549,8 +554,6 @@ p3
 Finally, since the object of this study was to reduce the dimension of the data set, it is possible to obtain **the coordinates of the original data in the new reference system**. In fact, they are stored since we used the prcomp function to create the PCA variable.
 
 ```{r warning=FALSE, message=FALSE}
-
 head(PCA$x)
-
 ```
 
